turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:5: error: not found: value color
    setCouleur(color.black);
               ^DiskTwo:15: error: not found: value color
    setCouleur(color.red);
               ^