turtleart.disktwo.DiskTwo.scala.code
override def run()
{  
  for (j <- 1 to 9)
  {
    setCouleur(color.black);
  
    for (i <- 1 to 10)
    {
      avance(100);
      gauche(180);
      avance(100);
      gauche(179);
    }
    
    setCouleur(color.red);
    
    for (i <- 1 to 10)
    {
      avance(100);
      gauche(180);
      avance(100);
      gauche(179);
    }
  }
}